force-app/main/default/objects/ULBC_Email_Send__c/ULBC_Email_Send__c.object-meta.xml
<CustomObject>
    <description>Custom mass-email send. One row per send (e.g. one newsletter, one dinner-invite blast) scoped to a Campaign. Roll-up fields aggregate open and click counts from ULBC_Email_Send_Recipient__c so per-Campaign engagement is reportable as queryable fields rather than via standard Email Tracking joins.</description>
    <label>ULBC Email Send</label>
    <nameField>
        <displayFormat>EMS-{00000}</displayFormat>
        <label>Send Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ULBC Email Sends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>