force-app/main/default/objects/ULBC_Email_Send__c/fields/ULBC_Campaign__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Campaign__c</fullName>
    <description>Campaign this send is scoped to. Recipients are sourced from CampaignMember; tracking events roll up so per-Campaign open/click rates can be reported. Required — there is no "send to a list view" mode in v1.</description>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Email Sends</relationshipLabel>
    <relationshipName>ULBC_Email_Sends</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>