force-app/main/default/objects/ULBC_Email_Send__c/fields/ULBC_Click_Count__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Click_Count__c</fullName>
    <description>Number of unique recipients with at least one click. Most honest engagement signal — anchor reporting here, not on opens.</description>
    <label>Unique Click Count</label>
    <summaryFilterItems>
        <field>ULBC_Email_Send_Recipient__c.ULBC_Click_Count__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>ULBC_Email_Send_Recipient__c.ULBC_Email_Send__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>