force-app/main/default/objects/ULBC_Email_Send__c/fields/ULBC_Click_Rate__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Click_Rate__c</fullName>
    <description>Unique clicks divided by sent count, expressed as a percentage. The most honest engagement signal — anchor decisions here.</description>
    <formula>IF(ULBC_Sent_Count__c &gt; 0, (ULBC_Click_Count__c / ULBC_Sent_Count__c) * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Click Rate %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>