force-app/main/default/objects/ULBC_Email_Send__c/fields/ULBC_Email_Template_DevName__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Email_Template_DevName__c</fullName>
    <description>EmailTemplate.DeveloperName used for this send. Storing the DevName rather than Id keeps the audit trail readable across sandbox refreshes (record Ids change; DeveloperName does not). The Apex resolves to Id at send time.</description>
    <label>Email Template DevName</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>