force-app/main/default/objects/ULBC_Email_Send__c/fields/ULBC_Filter_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Filter_Snapshot__c</fullName>
    <description>JSON snapshot of the filter spec passed to ULBC_EmailRecipientResolver. Audit-only — lets us reconstruct who would have been included if the same Campaign were re-sent later.</description>
    <label>Filter Snapshot</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>