force-app/main/default/objects/ULBC_Email_Send__c/fields/ULBC_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Initiated_By__c</fullName>
    <description>User who pressed Send in the LWC composer. CreatedById would normally suffice, but this field is preserved across record re-parenting and surfaces in reports without a join.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Email Sends Initiated</relationshipLabel>
    <relationshipName>ULBC_Email_Sends_Initiated</relationshipName>
    <type>Lookup</type>
</CustomField>