force-app/main/default/objects/ULBC_Email_Send__c/fields/ULBC_Open_Count__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Open_Count__c</fullName>
    <description>Number of unique recipients with at least one open. Counts ULBC_Email_Send_Recipient__c rows with Open_Count__c &gt; 0 — so each recipient is counted once regardless of how many times they (or their inbox proxy) loaded the pixel.</description>
    <label>Unique Open Count</label>
    <summaryFilterItems>
        <field>ULBC_Email_Send_Recipient__c.ULBC_Open_Count__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>ULBC_Email_Send_Recipient__c.ULBC_Email_Send__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>