force-app/main/default/objects/ULBC_Email_Send__c/fields/ULBC_Open_Rate__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Open_Rate__c</fullName>
    <description>Unique opens divided by sent count, expressed as a percentage. 0 when nothing has been sent yet. Inflated by Apple MPP and Gmail proxying — anchor decisions on Click Rate.</description>
    <formula>IF(ULBC_Sent_Count__c &gt; 0, (ULBC_Open_Count__c / ULBC_Sent_Count__c) * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Rate %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>