force-app/main/default/objects/ULBC_Email_Send__c/fields/ULBC_Recipient_Count__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Recipient_Count__c</fullName>
    <description>Total ULBC_Email_Send_Recipient__c rows materialised at send creation. Includes Suppressed rows (opted-out, bounced, missing email) so the audit trail shows everyone considered for this send. Set once by ULBC_EmailSendService.enqueue and never updated.</description>
    <label>Recipient Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>