force-app/main/default/objects/ULBC_Email_Send__c/fields/ULBC_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Sent_At__c</fullName>
    <description>Datetime the final batch finished and Status transitioned to Sent. Null while sending. Used as the time anchor for engagement reports ("opens within 24h of send").</description>
    <label>Sent At</label>
    <type>DateTime</type>
</CustomField>