force-app/main/default/objects/ULBC_Email_Send__c/fields/ULBC_Sent_Count__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Sent_Count__c</fullName>
    <description>Roll-up of recipients in Sent status. Denominator for open and click rate.</description>
    <label>Sent Count</label>
    <summarizedField>ULBC_Email_Send_Recipient__c.Id</summarizedField>
    <summaryFilterItems>
        <field>ULBC_Email_Send_Recipient__c.ULBC_Status__c</field>
        <operation>equals</operation>
        <value>Sent</value>
    </summaryFilterItems>
    <summaryForeignKey>ULBC_Email_Send_Recipient__c.ULBC_Email_Send__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>