force-app/main/default/objects/ULBC_Email_Send__c/fields/ULBC_Status__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Status__c</fullName>
    <description>Lifecycle: Draft (created by composer, recipients materialised) → Queued (Queueable enqueued) → Sending (first batch picked up) → Sent (last batch finished, all recipients in terminal state) → Failed (zero recipients went out) → Cancelled (user aborted before Sending).</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Sending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>