force-app/main/default/objects/ULBC_Email_Send__c/fields/ULBC_Subject__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Subject__c</fullName>
    <description>Resolved subject line at send time. Snapshot — if the EmailTemplate's subject is later edited, this field still shows what was actually sent.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>